--- a/CoordinateTool/bin/CoordinateToolUI.exe.config
+++ b/CoordinateTool/bin/CoordinateToolUI.exe.config
@@ -9,6 +9,30 @@
         <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.0.1" newVersion="4.2.0.1" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Prism.Container.Abstractions" publicKeyToken="40ee6c3a2184dc59" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.107.57918" newVersion="9.0.107.57918" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Prism.Wpf" publicKeyToken="40ee6c3a2184dc59" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.537.60525" newVersion="9.0.537.60525" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Prism" publicKeyToken="40ee6c3a2184dc59" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.537.60525" newVersion="9.0.537.60525" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Unity.Abstractions" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.11.7.0" newVersion="5.11.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Unity.Container" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.11.11.0" newVersion="5.11.11.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Prism.Container.DryIoc" publicKeyToken="40ee6c3a2184dc59" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.107.57918" newVersion="9.0.107.57918" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
