--- a/CoordinateTool/bin/CoordinateToolDotNet.runtimeconfig.json
+++ b/CoordinateTool/bin/CoordinateToolDotNet.runtimeconfig.json
@@ -1,18 +1,20 @@
 {
   "runtimeOptions": {
-    "tfm": "net6.0",
+    "tfm": "net8.0",
     "frameworks": [
       {
         "name": "Microsoft.NETCore.App",
-        "version": "6.0.0"
+        "version": "8.0.0"
       },
       {
         "name": "Microsoft.WindowsDesktop.App",
-        "version": "6.0.0"
+        "version": "8.0.0"
       }
     ],
     "configProperties": {
-      "System.Reflection.Metadata.MetadataUpdater.IsSupported": false
+      "System.Reflection.Metadata.MetadataUpdater.IsSupported": false,
+      "System.Runtime.Serialization.EnableUnsafeBinaryFormatterSerialization": true,
+      "CSWINRT_USE_WINDOWS_UI_XAML_PROJECTIONS": false
     }
   }
 }
