--- a/CoordinateTool/ALG/ALG.vcxproj
+++ b/CoordinateTool/ALG/ALG.vcxproj
@@ -74,6 +74,7 @@
       <ConformanceMode>false</ConformanceMode>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <DisableSpecificWarnings>4267;4244;4819</DisableSpecificWarnings>
+      <Optimization>Disabled</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
