--- a/CoordinateTool/CoordinateTool/Properties/launchSettings.json
+++ b/CoordinateTool/CoordinateTool/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "CoordinateTool": {
       "commandName": "Project",
-      "nativeDebugging": false
+      "nativeDebugging": true
     }
   }
 }
